--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "simplebar-react": "^3.3.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
